2015-11-24  Natalia Portillo  <claunia@claunia.com>

	* CD/ATIP.cs:
	  ATIP not always contain S4.
	Corrected typo.

	* CD/Session.cs:
	  Added missing newlines.

	* CD/TOC.cs:
	  Added missing newlines.
	Recognize Lead-Out track.

	* SCSI/MMC/DiscInformation.cs:
	  Added structures for Disc Informations 001b and 010b.

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Sense.cs:
	  Typo

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* ATA/Errors.cs:
	* DiscImageChef.Decoders.csproj:
	  Moved ATA register definition to a more common place.

	* SCSI/Sense.cs:
	  Added information from SAT-4.

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Sense.cs:
	  Added information from SPC-5.

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Sense.cs:
	* DiscImageChef.Decoders.csproj:
	  Added decoding SCSI SENSE as defined in SCSI-2.

2015-11-05  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Check for vendor pages not following page format (even if
	  they must).

2015-11-02  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Decoders.csproj:
	* SCSI/DiscStructureCapabilities.cs:
	  Added READ DISC STRUCTURE.

2015-11-01  Natalia Portillo  <claunia@claunia.com>

	* SCSI/MMC/Features.cs:
	  Reword Feature 0105h.
	Correct handling of feature 010Ch.

2015-11-01  Natalia Portillo  <claunia@claunia.com>

	* SCSI/MMC/Features.cs:
	  Correct math priority

2015-11-01  Natalia Portillo  <claunia@claunia.com>

	* SCSI/MMC/Features.cs:
	  Added code to separate features and the feature header.

2015-11-01  Natalia Portillo  <claunia@claunia.com>

	* SCSI/MMC/Features.cs:
	  Implemented prettifying all known features.

2015-11-01  Natalia Portillo  <claunia@claunia.com>

	* SCSI/MMC/Features.cs:
	  Implemented decoding all known features.

2015-11-01  Natalia Portillo  <claunia@claunia.com>

	* SCSI/MMC/Features.cs:
	  Added structures from MMC-6.

2015-11-01  Natalia Portillo  <claunia@claunia.com>
